src/test/deca/syntax/valid/parser/oracle/mult_expr_third_deriv.deca
{
  x / 5; 5 / 2 / 1.0; !!x.p() / !!x.p(); 49.0 / "Hello World" / (2 / true));
}
