src/test/deca/syntax/invalid/parser/oracle/while_with_instr_without_semicolon.deca
{
	while(1){println("Hello World !")}
}
